# project_magnolia

./: .gitignore  LICENSE  README.md  WORKFLOW_GUIDE.md  todo.md
docs/: azzurra-setup.md  cybernetics_assessment.md
opencode_3_tier_mem/mcp-servers/compchem-memory/: pyproject.toml
opencode_3_tier_mem/mcp-servers/compchem-memory/src/compchem_memory/: server.py  storage.py
opencode_3_tier_mem/mcp-servers/compchem-memory/src/compchem_memory/learning/: __init__.py  assessor.py  consolidator.py
opencode_3_tier_mem/mcp-servers/compchem-memory/src/compchem_memory/tiers/: project.py  session.py
opencode_3_tier_mem/mcp-servers/compchem-memory/tests/: test_memory.py
opencode_cc_mem/: AGENTS.md  WORKFLOW_GUIDE.md  opencode.json  opencode.json.template
opencode_cc_mem/mcp-servers/compchem-tools/: pyproject.toml
opencode_cc_mem/mcp-servers/compchem-tools/src/compchem_tools/: __init__.py  progress.py  server.py
opencode_cc_mem/mcp-servers/compchem-tools/src/compchem_tools/gates/: __init__.py  covalent.py  docking.py
opencode_cc_mem/mcp-servers/compchem-tools/src/compchem_tools/tools/: __init__.py  covalent.py  gnina.py  gromacs.py  haddock3.py  jobs.py  orca.py  p2rank.py  poller.py  preprocess.py  shell.py  ssh_slurm.py
opencode_cc_mem/mcp-servers/compchem-tools/tests/: conftest.py  test_check_run_status.py  test_phase3.py  test_poll_jobs_tool.py  test_poller.py  test_run_shell.py  test_sbatch_template.py  test_ssh_slurm.py  test_ssh_slurm_integration.py  test_ssh_slurm_restart.py  test_submit_writeahead.py  test_tools.py  test_tools_capture.py
(+92 files in other folders)
